# 5_people

./: .gitignore  README.md  app.json
backend/: docker-compose.yml  main.py  map.html  requirements.txt
backend/app/: Dockerfile  api.py  entrypoint.sh  pyproject.toml
backend/app/src/: .env  api.py  check_connection.py  connection_config.py  main.py  model.py
backend/app/src/auth/: auth_handler.py
backend/database/: docker-compose.yml  init.sql
frontend/: App.tsx  app.json  package-lock.json  package.json
frontend/client/: App.tsx  app.json  package-lock.json  package.json
frontend/client/src/: api.ts
frontend/client/src/components/: ClearReport.tsx  CommentSection.tsx  Home.tsx  ImagePicker.tsx  Map.tsx  MapPicker.tsx  PickerInfo.tsx  Profile.tsx
frontend/client/src/data_samples/: moderation_panel.ts
frontend/client/src/pages/: Detail.tsx  Home.tsx  HomePage.tsx  MapPage.tsx  ProfiePage.tsx  Reports.tsx  TopUsersPage.tsx
frontend/moderator/: .env  package-lock.json  package.json
frontend/moderator/public/: index.html
frontend/moderator/src/: App.tsx  index.css
frontend/moderator/src/api/: api.ts
frontend/moderator/src/components/: Manifest.tsx  NavMenu.tsx  Stars.tsx
frontend/moderator/src/data_samples/: manifesto.ts  moderation_panel.ts
frontend/moderator/src/pages/: Main.tsx  ModerationPanel.tsx
frontend/moderator/src/pages/auth/: AuthContext.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/pages/: Home.tsx
frontend/src/components/: ImagePicker.tsx  Map.tsx  PickerInfo.tsx
frontend/src/pages/: Home.tsx
(+5 files in other folders)
